# mdtools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: quality.yml
bench/: BENCH_V2.md  BENCH_V2_ATTRIBUTION.md  BENCH_V2_CLEAN_ABLATION.md  HEADLINE.md  RESULTS.md  V3.md  __init__.py  agg_util.py  analyze.py  auto_research.py  command_policy.py  harness.py  ledger.md  md_inventory_v1.json  multifile_drift.py  neutral_scorer.py  oai_loop.py  pi_audit_adapter.py  pi_runner.py  report.py  results_canon.py  stats.py  test_agg_util.py  test_analyze_inputs.py  test_auto_research.py  test_command_policy.py  test_failure_taxonomy.py  test_harness_json.py  test_harness_multifile.py  test_harness_run_artifacts.py  test_harness_task_split.py  test_manifest.py  test_native_runner.py  test_neutral_scorer.py  test_oai_loop.py  test_pi_audit.py  test_prompt_neutrality.py  test_report_inputs.py  test_results_canon.py  test_stats.py  (+1 more)
bench/expected/: t10_marked.md  t11_summary.json  t12_batch.md  (+20 more)
benches/: core.rs
loop/: ACCEPTANCE.md  PROMPT.md  STATE.md
probes/: README.md  TEMPLATE.md
specs/: fract-ai-bridge-contract.md  frontier-loop.md  mdtools.md  move-section-design.md  t12-draft.md
src/: cli.rs  errors.rs  lib.rs  main.rs  model.rs  multifile.rs  output.rs  parser.rs
tests/: cli_adoption_fixes.rs  cli_contracts.rs  cli_error_envelope.rs  cli_move_section.rs  cli_multifile.rs  cli_personas.rs  cli_progress.rs  cli_read.rs  cli_scenarios.rs  cli_schema.rs  cli_search.rs  cli_section_etag.rs  cli_set.rs  cli_table.rs  cli_tasks.rs  cli_write.rs
(+1220 files in other folders)
