[package]
name = "mdtools"
version = "0.1.0"
edition = "2021"

[lib]
name = "mdtools"
path = "src/lib.rs"

[[bin]]
name = "md"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comrak = "=0.51.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"
